--- a/src/components/NewExpense/ExpenseForm.css
+++ b/src/components/NewExpense/ExpenseForm.css
@@ -4,6 +4,8 @@
     gap: 1rem;
     margin-bottom: 1rem;
     text-align: left;
+    padding: 15px;
+    font-family: icon;
   }
   
   .new-expense__control label {
