--- a/src/components/ExpenseFilter.css
+++ b/src/components/ExpenseFilter.css
@@ -2,10 +2,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color:whitesmoke;
+    background-color:rgb(32, 28, 28);
   }
   .filter__title {
-    color: grey;
+    color: whitesmoke;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     width: 200px;
   }
